# Dayboard

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  _brackets.py  _debug.py  _fix.py
assets/reference/opendesign-prototype/: README.md  settings-accounts.html  settings-widget.html  widget-main.html
assets/reference/opendesign-prototype/scripts/: settings.js  widget.js
assets/reference/opendesign-prototype/styles/: settings.css  widget.css
code/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
code/src/: App.tsx  calendar-actions.test.ts  calendar-actions.ts  reminders.test.ts  reminders.ts  storage.test.ts  storage.ts  styles.css  tauri-runtime.ts
code/src-tauri/: Cargo.toml  tauri.conf.json
code/src-tauri/capabilities/: default.json
code/src-tauri/src/: lib.rs  main.rs
code/src/sync/: google.test.ts  google.ts
docs/: DECISIONS.md  FEATURE_GAP_ANALYSIS.md  MVP_ACCEPTANCE.md  OPEN_SOURCE_RESEARCH.md  PRD.md  ROADMAP.md  dayboard-design-spec-2026-06-06.md
notes/: calendar-multi-source-sync.md  calendar-sync-notes.md  windows-desktop-widget-notes.md
