[package]
name = "dayboard"
version = "0.1.0"
description = "A lightweight Windows desktop calendar and task board."
authors = ["Dayboard"]
edition = "2021"

[lib]
name = "dayboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
